[ REFACTOR ] z-index issues on button fx

--- a/resources/src/styles/_button.scss
+++ b/resources/src/styles/_button.scss
@@ -1,5 +1,7 @@
 @mixin curtain($color: red, $duration: 0.25s, $from: top) {
   @content;
+  // creates a new stacking context for z-index and positioning
+  isolation: isolate;
 
   &::before {
     content: '';
