--- a/resources/src/styles/_modal.scss
+++ b/resources/src/styles/_modal.scss
@@ -5,7 +5,6 @@
   background-color: $color-element;
   border-radius: 0.25em;
   border: 4px solid rgba(255, 255, 255, 0.1);
-  z-index: -1;
 }
 
 .modal__content {
